fix: Always display type parameter data when present

--- a/tools/api-markdown-documenter/src/test/snapshots/html/simple-suite-test/default-config/simple-suite-test.html
+++ b/tools/api-markdown-documenter/src/test/snapshots/html/simple-suite-test/default-config/simple-suite-test.html
@@ -672,6 +672,35 @@
             <code>
               export declare function testFunction&lt;TTypeParameter&gt;(testParameter: TTypeParameter, testOptionalParameter?: TTypeParameter): TTypeParameter;
             </code>
+            <p>
+              <section>
+                <h5>
+                  Type Parameters
+                </h5>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>
+                        Parameter
+                      </th>
+                      <th>
+                        Description
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        TTypeParameter
+                      </td>
+                      <td>
+                        A test type parameter
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </section>
+            </p>
           </section>
           <section>
             <h4 id="testfunction-remarks">
