--- a/tools/api-markdown-documenter/src/test/snapshots/html/simple-suite-test/default-config/simple-suite-test.html
+++ b/tools/api-markdown-documenter/src/test/snapshots/html/simple-suite-test/default-config/simple-suite-test.html
@@ -670,7 +670,7 @@
               Signature
             </h4>
             <code>
-              export declare function testFunction&lt;TTypeParameter&gt;(testParameter: TTypeParameter, testOptionalParameter?: TTypeParameter): TTypeParameter;
+              export declare function testFunction&lt;TTypeParameter extends TestInterface = TestInterface&gt;(testParameter: TTypeParameter, testOptionalParameter?: TTypeParameter): TTypeParameter;
             </code>
             <p>
               <section>
@@ -684,6 +684,9 @@
                         Parameter
                       </th>
                       <th>
+                        Default
+                      </th>
+                      <th>
                         Description
                       </th>
                     </tr>
@@ -692,6 +695,9 @@
                     <tr>
                       <td>
                         TTypeParameter
+                      </td>
+                      <td>
+                        <span><a href='./simple-suite-test/testinterface-interface'>TestInterface</a></span>
                       </td>
                       <td>
                         A test type parameter
