--- a/tools/api-markdown-documenter/src/test/snapshots/html/simple-suite-test/default-config/simple-suite-test.html
+++ b/tools/api-markdown-documenter/src/test/snapshots/html/simple-suite-test/default-config/simple-suite-test.html
@@ -684,6 +684,9 @@
                         Parameter
                       </th>
                       <th>
+                        Constraint
+                      </th>
+                      <th>
                         Default
                       </th>
                       <th>
@@ -695,6 +698,9 @@
                     <tr>
                       <td>
                         TTypeParameter
+                      </td>
+                      <td>
+                        <span><a href='./simple-suite-test/testinterface-interface'>TestInterface</a></span>
                       </td>
                       <td>
                         <span><a href='./simple-suite-test/testinterface-interface'>TestInterface</a></span>
